=== Alexander-44 ===

2002-12-20  Trey Matteson  <trey@apple.com>

        Do not add empty URLs to the back forward list.

	Reviewed by Richard, Darin

        * WebView.subproj/WebFramePrivate.m:
        (-[WebFrame _transitionToCommitted:]):

2002-12-20  Trey Matteson  <trey@apple.com>

	3133829 - crash leaving page with a running applet

	This fixes some holes in how we teardown plugins.  An additional fix is expected
	from Mike Hay to finish the issue. (3133981)

        Reviewed by Richard

        * Plugins.subproj/WebPluginController.m:
        (-[WebPluginController destroyAllPlugins]):  frame=nil, so we don't do any more
	messaging back to WK after this step.
        (-[WebPluginController showURL:inFrame:]):  bail if !frame
        (-[WebPluginController showStatus:]):  bail if !frame
        * WebView.subproj/WebFramePrivate.m:
        (-[WebFrame _detachFromParent]):  destroy plugins here.  We were only doing it
	in the non-frame case.

=== Alexander-43 ===

2002-12-20  Trey Matteson  <trey@apple.com>

	3131841 - crash when switching encodings on a page with frames

        Reviewed by rjw

        * WebView.subproj/WebFramePrivate.m:
        (-[WebFrame _transitionToCommitted:]):  Create a docView in the LoadStale case, like
	every other kind of load does.

2002-12-20  Richard Williamson   <rjw@apple.com>

        Fixed 3133261.  This fix really has two parts.  This first part
        is here in WebTextRenderer.  The second part adds some width
        caching to RenderText.  I was using a stack allocated array,
        this would blow out the stack for large strings.

        Reviewed by john.

        * WebCoreSupport.subproj/WebTextRenderer.m:

2002-12-20  Trey Matteson  <trey@apple.com>

	We now build with symbols the B&I.  Deployment builds are without symbols,
	so it is easy to generate a non-huge app as a one-off.

        Reviewed by Darin

        * WebKit.pbproj/project.pbxproj:

=== Alexander-42 ===
